--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "CollectW",
-  "version": "0.1.2.20140918",
+  "version": "0.1.2-20140918",
   "author": "Cyril Feraudet",
   "license": "GPLv2",
   "dependancies": {
