--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "CollectW",
-  "version": "1.2.1-20140926",
+  "version": "1.2.1",
   "author": "Cyril Feraudet",
   "license": "GPLv2",
   "dependancies": {
