--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "express": "~4.4.5",
     "node-windows": ">=0.1.7",
     "process": "~0.7.0",
-    "config": "~1.2.0"
+    "config": ">=1.2.0"
   },
   "devDependencies": {
     "grunt": "^0.4.5",
