--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "CollectM",
-  "version": "1.3.2-rc1",
+  "version": "1.3.2",
   "author": "Cyril Feraudet",
   "license": "GPLv2",
   "dependancies": {
