--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "CollectM",
-  "version": "1.3.4",
+  "version": "1.3.5dev",
   "author": "Cyril Feraudet",
   "license": "GPLv2",
   "dependancies": {
@@ -11,7 +11,6 @@
     "body-parser": "",
     "connect-basic-auth": "~0.1.0",
     "express": "~4.4.5",
-    "node-windows": ">=0.1.7",
     "process": "~0.7.0",
     "config": ">=1.2.0"
   },
